<resources>
    <string name="app_name">BudgetWiseApp</string>
    <string name="login">Login</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="budgetwise_login">BudgetWise Login</string>

    <string name="add_photo">Add Photo</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="date_yyyy_mm_dd">Date (YYYY-MM-DD)</string>

    <string name="expense_info">%1$s: R%2$.2f on %3$s</string>
    <string name="add_expense">Add Expense</string>
    <string name="save_category">Save Category</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="Amount">Amount</string>
    <string name="Description">Description</string>
    <string name="Save_expense">Save Expense</string>
    <string name="filter_expenses">Filter Expenses</string>
    <string name="view_expenses">View Expenses</string>
    <string name="close">Close</string>
    <string name="expense_photo">Expense Photo</string>
    <string name="view_photo">View Photo</string>
    <string name="category_summary_list_for_budget_overview">Category summary list for budget overview</string>
    <string name="Close">Close</string>
    <string name="category_summary">Category Summary</string>
    <string name="total_income_r0">Total Income: R0</string>
    <string name="total_spent_r0">Total Spent: R0</string>
    <string name="view_summary">View Summary</string>
    <string name="welcome_to_budgetwise">Welcome to BudgetWise!</string>
    <string name="Add_category">Add Category</string>
    <string name="Add_expense">Add Expense</string>
    <string name="View_expenses">View Expenses</string>
    <string name="set_monthly_goals">Set Monthly Goals</string>
    <string name="View_summary">View Summary</string>
    <string name="Set_monthly_goals">Set Monthly Goals</string>
    <string name="minimum_monthly_goal">Minimum Monthly Goal</string>
    <string name="_0">0</string>
    <string name="maximum_monthly_goal">Maximum Monthly Goal</string>
    <string name="_o">0</string>
    <string name="save_goals">Save Goals</string>
    <string name="sample_expense">Sample Expense</string>
    <string name="save_expense">Save Expense</string>
    <string name="Add_photo">Add Photo</string>
    <string name="End_time">End Time</string>
    <string name="Start_time">Start Time</string>
    <string name="Date_yyyy_mm_dd">Date (YYYY-MM-DD)</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="View_photo">View Photo</string>
    <string name="filter">Filter</string>
    <string name="show_filter">Show Filter</string>
    <string name="expense_list">Expense List</string>
    <string name="View_Expenses">View Expenses</string>
    <string name="hello_budgetmaster">Hello, BudgetMaster 👋</string>
    <string name="available_budget">Available Budget</string>
    <string name="r_1_250_00">R 1,250.00</string>
    <string name="add_Category">Add Category</string>
    <string name="add_Expense">Add Expense</string>
    <string name="view_Expenses">View Expenses</string>
    <string name="set_Monthly_goals">Set Monthly Goals</string>
    <string name="view_Summary">View Summary</string>
    <string name="view_receipts">View Receipts</string>
    <string name="logout">Logout</string>
    <string name="set_monthly_Goals">Set Monthly Goals</string>
    <string name="Minimum_goal_r">Minimum Goal (R)</string>
    <string name="e_g_500_00">e.g. 500.00</string>
    <string name="maximum_goal_r">Maximum Goal (R)</string>
    <string name="e_g_1500_00">e.g. 1500.00</string>
    <string name="save_Goals">Save Goals</string>
    <string name="CLose">CLOSE</string>
    <string name="Category_summary">Category Summary</string>
    <string name="total_income_r0_00">Total Income: R0.00</string>
    <string name="total_spent_r0_00">Total Spent: R0.00</string>
    <string name="View_Summary">View Summary</string>
    <string name="todo">TODO</string>
    <string name="login_to_budgetwise">Login to BudgetWise</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
</resources>