<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_Summary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/tvTotalSpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_spent_r0_00"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvTotalIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_income_r0_00"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvCategorySummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Category_summary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategorySummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnCloseSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CLose"
            android:layout_marginTop="16dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tvGoalStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/imgBadge"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/badge"
            android:visibility="gone"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/imgConsistency"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/consistency"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>

